--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                 
                 <!-- Desktop Navigation -->
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="\" class="text-gray-700 hover:text-primary dark:text-gray-300 dark:hover:text-primary transition-colors duration-300">Home</a>
+                    <a href="/Mare-Fuga" class="text-gray-700 hover:text-primary dark:text-gray-300 dark:hover:text-primary transition-colors duration-300">Home</a>
                     <a href="#features" class="text-gray-700 hover:text-primary dark:text-gray-300 dark:hover:text-primary transition-colors duration-300">Features</a>
                     <a href="#gallery" class="text-gray-700 hover:text-primary dark:text-gray-300 dark:hover:text-primary transition-colors duration-300">Gallery</a>
                     <a href="#plans" class="text-gray-700 hover:text-primary dark:text-gray-300 dark:hover:text-primary transition-colors duration-300">Plans</a>
@@ -561,7 +561,7 @@
             <!-- Mobile Navigation Menu (Hidden by default) -->
             <div id="mobile-menu" class="hidden bg-white dark:bg-gray-900 shadow-lg rounded-b-2xl py-5 px-6 md:hidden w-full">
                 <ul class="space-y-5">
-                    <li><a href="#" class="block text-primary font-medium text-lg py-2">Home</a></li>
+                    <li><a href="/Mare-Fuga" class="block text-primary font-medium text-lg py-2">Home</a></li>
                     <li><a href="#features" class="block hover:text-primary font-medium transition-colors duration-300 text-lg py-2">Features</a></li>
                     <li><a href="#gallery" class="block hover:text-primary font-medium transition-colors duration-300 text-lg py-2">Gallery</a></li>
                     <li><a href="#plans" class="block hover:text-primary font-medium transition-colors duration-300 text-lg py-2">Plans</a></li>
@@ -2655,7 +2655,7 @@
                         <span class="absolute bottom-0 left-0 w-full h-1 bg-primary/30"></span>
                     </h3>
                     <ul class="space-y-3">
-                        <li><a href="\" class="text-gray-400 hover:text-primary transition-colors duration-300 flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-primary"></i> Home</a></li>
+                        <li><a href="/Mare-Fuga" class="text-gray-400 hover:text-primary transition-colors duration-300 flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-primary"></i> Home</a></li>
                         <li><a href="#features" class="text-gray-400 hover:text-primary transition-colors duration-300 flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-primary"></i> Features</a></li>
                         <li><a href="#gallery" class="text-gray-400 hover:text-primary transition-colors duration-300 flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-primary"></i> Gallery</a></li>
                         <li><a href="#plans" class="text-gray-400 hover:text-primary transition-colors duration-300 flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-primary"></i> Plans</a></li>
